2002-04-20  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c (process_auto_create_list): Added
	progress-bar support for transaction auto-creation.

2002-04-17  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c
	(editor_ok_button_clicked): Added checks for ScheduledTransactions
	with no name, same name as existing SchedXaction.
	(row_select_handler): Resolved "critical" GTK run-time warning
	regarding navigating the Scheduled Transaction list with the arrow
	keys.

2002-04-16  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c
	(editor_ok_button_clicked): Check to see if the user is attempting
	to create a Scheduled Transaction which can't occur; confirm with
	them if they are.

	* src/gnome-utils/gnc-frequency.c
	(freq_option_value_changed): StartDate and frequency-specific
	options now come into better sync [when possible] on
	frequency-type change.

2002-04-16  Joshua Sled  <jsled@asynchronous.org>

	* src/register/ledger-core/gnc-ledger-display.c: Some template-GL
	cleanup [debugging printf's removed].  Removed never-used
	LD_TEMPLATE type.

	* src/gnome/glade/sched-xact.glade: Removed unused start page.

	* src/gnome/dialog-sxsincelast.c: Added support for using the
	gnc-regWidget to display created transactions for review. Added
	'Cancel' support. Didn't remove enough dead code, but started to.

	* src/gnome/dialog-scheduledxaction.c: Added support for using the
	gncRegWidget in the SX editor.  Formatting changes.

	* src/register/ledger-core/gnc-regWidget.{h,c}: Added; a
	macro-widget roughly duplicating the src/gnome/window-register.c
	look-and-feel-and-behavior.

	* src/engine/SchedXaction.c: Added support for saving a "temporal
	snapshot" of a scheduled transaction. Rewrote "sequence state"
	manipulations in terms of temporal snapshots.

	* src/engine/Query.c: Add support for Querying the template
	AccountGroup.

	* src/doc/TODO-schedxactions: Updates.
