@@ -34,6 +34,10 @@ typedef struct sixtp_stack_frame {
   gpointer data_for_children;
   GSList *data_from_children; /* in reverse chronological order */
   gpointer frame_data;
+
+  /* Line and column [of the start tag]; set during parsing. */
+  int line;
+  int col;
 } sixtp_stack_frame;
 
 struct _sixtp_parser_context_struct 
